# compress-tool-app

./: README.md  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: DropZone.tsx  FileList.tsx  ProgressBar.tsx  ResultPanel.tsx
src/types/: index.ts
