[package]
name = "compress-tool-app"
version = "0.1.0"
description = "资源压缩工具"
authors = ["you"]
edition = "2021"

[lib]
name = "compress_tool_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
image = "0.25"
